Fix apperance of Panel components with allowOverflow of true, set up StdPanel to pass all additional props down to its rendered Panel so that infographic panels can use allowOverflow. Finally, use allowOverflow on panels containing CircleProportionChart, because it's popups frequently go out-of-bounds

--- a/client/src/components/Panel.scss
+++ b/client/src/components/Panel.scss
@@ -7,10 +7,15 @@
   .panel.panel-overflow {
     overflow: visible;
   
+    /* .panel has a $standardBorderRadius border, so when overflow is visible we need to correct for the corners of the inside of the panel */
+    $adjustmentBorderRadius: $standardBorderRadius*0.8;
+    & > .panel-heading { 
+      border-top-left-radius: $adjustmentBorderRadius;
+      border-top-right-radius: $adjustmentBorderRadius;
+    }
     & > .panel-body {
-      /* .panel has a border radius of 10px, if the overflow is visible we need to correct the the white rectangle that starts popping out */ 
-      border-bottom-left-radius: $standardBorderRadius*0.8;
-      border-bottom-right-radius: $standardBorderRadius*0.8;
+      border-bottom-left-radius: $adjustmentBorderRadius;
+      border-bottom-right-radius: $adjustmentBorderRadius;
     }
   }
   .panel-body > .row > .source {
